2010-09-05  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r66801.
        http://trac.webkit.org/changeset/66801
        https://bugs.webkit.org/show_bug.cgi?id=45242

        'breaks editing/pasteboard/onpaste-text-html.html' (Requested
        by mwenge4 on #webkit).

        * WebCoreSupport/ChromeClientQt.cpp:
        (WebCore::ChromeClientQt::addMessageToConsole):

2010-09-05  Robert Hogan  <robert@webkit.org>

        Reviewed by Antonio Gomes.

        [Qt] utf8 encoding of console() messages

        http/tests/security/xssAuditor/embed-tag-null-char.html
        http/tests/security/xssAuditor/object-embed-tag-null-char.html

        both fail because ChromeClientQt::addMessageToConsole() is
        casting String to QString rather than String::utf8().data()

        https://bugs.webkit.org/show_bug.cgi?id=45240

        * WebCoreSupport/ChromeClientQt.cpp:
        (WebCore::ChromeClientQt::addMessageToConsole):

2010-09-03  Jesus Sanchez-Palencia  <jesus.palencia@openbossa.org>

        Reviewed by Darin Adler.

        Add NetworkingContext to avoid layer violations
        https://bugs.webkit.org/show_bug.cgi?id=42292

        Add Qt's specific implementation of NetworkingContext.

        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::setFrame):
        (WebCore::FrameLoaderClientQt::createNetworkingContext):
        * WebCoreSupport/FrameLoaderClientQt.h:
        * WebCoreSupport/FrameNetworkingContextQt.cpp:
        (WebCore::FrameNetworkingContextQt::FrameNetworkingContextQt):
        (WebCore::FrameNetworkingContextQt::create):
        (WebCore::FrameNetworkingContextQt::originatingObject):
        (WebCore::FrameNetworkingContextQt::networkAccessManager):

2010-09-02  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Pavel Feldman.

        REGRESSION: Crash occurs at objc_msgSend when closing a window that is displaying the web inspector